TSK-2004: JavaDoc 4 TaskanaConfiguration.Builder#initTaskanaProperties
And refactoring of some components around the TaskanaConfiguration